# python-interpreter-mcp

./: pyproject.toml
example/: example.py  llm_generated_script.py  llm_trace.txt
src/python_interpreter_mcp/: __init__.py  runner.py
